--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,11 @@
   "manifest_version": 2,
   "version": "2.3",
   "description": "rua!",
-  "permissions": ["activeTab"],
+  "permissions": ["notifications", "activeTab","https://api.live.bilibili.com/*"],
+  "background": {
+    "scripts": ["js/Jquery-3.5.1.js","js/background.js"],
+    "persistent": false
+  },
   "icons": {
     "16": "images/haruka16.png",
     "32": "images/haruka32.png",
@@ -13,9 +17,10 @@
   "content_scripts": [ {
     "all_frames": true,
     "css": ["css/host.css"],
-    "js": ["js/host.js"],
+    "js": ["js/host.js", "js/Jquery-3.5.1.js"],
     "matches": [ "*://live.bilibili.com/21652717*", "*://live.bilibili.com/21652717?*", "*://live.bilibili.com/record/21652717*"],
     "run_at": "document_end"
   } ],
-  "web_accessible_resources": ["images/*", "css/*", "js/*"]
+  "web_accessible_resources": ["images/*", "css/*", "js/*"],
+  "content_security_policy": "script-src 'self' https://api.live.bilibili.com; object-src 'self'"
 }
