swaped image file, add new emoji

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "rua豹器",
   "manifest_version": 2,
-  "version": "4.0",
+  "version": "4.3",
   "description": "rua!",
   "permissions": ["cookies", "notifications","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/", "https://www.bilibili.com/", "http://i0.hdslb.com/*"],
   "background": {
@@ -21,15 +21,15 @@
     "run_at": "document_start"
   },{
     "all_frames": true,
-    "css": ["css/host.css"],
+    "css": ["css/host.css", "css/button.css"],
     "js": ["js/haruka.js","js/WebHost.js"],
-    "matches": [ "*://live.bilibili.com/21652717*", "*://live.bilibili.com/21652717?*", "*://live.bilibili.com/record/21652717*"],
+    "matches": [ "*://live.bilibili.com/21652717*", "*://live.bilibili.com/21652717?*", "*://live.bilibili.com/record/21652717*", "*://live.bilibili.com/blanc/21652717?liteVersion=true"],
     "run_at": "document_end"
   },{
     "all_frames": true,
-    "css": ["css/host.css"],
+    "css": ["css/host.css", "css/button.css"],
     "js": ["js/pudding.js","js/WebHost.js"],
-    "matches": [ "*://live.bilibili.com/21413565*", "*://live.bilibili.com/21413565?*", "*://live.bilibili.com/record/21413565*"],
+    "matches": [ "*://live.bilibili.com/21413565*", "*://live.bilibili.com/21413565?*", "*://live.bilibili.com/record/21413565*","*://live.bilibili.com/blanc/21413565?liteVersion=true"],
     "run_at": "document_end"
   } ],
   "web_accessible_resources": ["images/*", "css/*", "js/*"],
