--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
   "name": "rua豹器",
   "manifest_version": 2,
-  "version": "4.6",
+  "version": "4.7",
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
   "description": "rua!",
-  "permissions": ["cookies", "notifications","webRequest","webRequestBlocking","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/", "https://www.bilibili.com/", "http://i0.hdslb.com/*"],
+  "permissions": ["cookies","storage","notifications","webRequest","webRequestBlocking","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/", "https://www.bilibili.com/", "http://i0.hdslb.com/*"],
   "background": {
     "scripts": ["js/ADT.js","js/Jquery-3.5.1.js","js/PushHost.js","js/background.js"],
     "persistent": true
