--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,12 @@
     "js": ["js/pudding.js","js/WebHost.js"],
     "matches": [ "*://live.bilibili.com/21413565*", "*://live.bilibili.com/21413565?*", "*://live.bilibili.com/record/21413565*","*://live.bilibili.com/blanc/21413565?liteVersion=true"],
     "run_at": "document_end"
+  },{
+    "all_frames": true,
+    "css": ["css/host.css", "css/button.css"],
+    "js": ["js/seki.js","js/WebHost.js"],
+    "matches": [ "*://live.bilibili.com/1603600*", "*://live.bilibili.com/1603600?*", "*://live.bilibili.com/record/1603600*","*://live.bilibili.com/blanc/1603600?liteVersion=true"],
+    "run_at": "document_end"
   }],
   "web_accessible_resources": ["images/*", "css/*", "js/*"],
   "content_security_policy": "script-src 'self' https://api.live.bilibili.com; object-src 'self'"
