--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "rua豹器",
   "manifest_version": 2,
-  "version": "4.14.3",
+  "version": "4.15",
   "browser_action": {
     "default_popup": "popup.html"
   },
   "description": "rua!",
-  "permissions": ["cookies","contextMenus", "storage","notifications","webRequest","webRequestBlocking","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/", "https://www.bilibili.com/", "https://*.hdslb.com/*", "https://api.vc.bilibili.com/", "https://tyrael-lee.gitee.io/", "https://tyraeldlee.github.io/"],
+  "permissions": ["cookies","contextMenus", "storage","notifications","webRequest","webRequestBlocking","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/", "https://www.bilibili.com/", "https://*.hdslb.com/*", "https://api.vc.bilibili.com/", "https://tyrael-lee.gitee.io/", "https://tyraeldlee.github.io/", "*://*.bilivideo.com/", "*://*.akamaized.net/"],
   "background": {
     "scripts": ["js/ADT.js","js/Jquery-3.5.1.js","js/background.min.js"],
     "persistent": true
@@ -19,7 +19,7 @@
   },
   "content_scripts": [{
     "all_frames": true,
-    "css": ["css/tips.css"],
+    "css": ["css/tips.min.css"],
     "js": ["js/ADT.js","js/Jquery-3.5.1.js","js/AfterLoad.min.js"],
     "matches": ["*://live.bilibili.com/*"],
     "run_at": "document_end"
@@ -30,21 +30,27 @@
     "run_at": "document_end"
   },{
     "all_frames": true,
-    "css": ["css/host.css", "css/button.css"],
+    "css": ["css/host.min.css", "css/button.min.css"],
     "js": ["js/haruka.js","js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/21652717*", "*://live.bilibili.com/21652717?*", "*://live.bilibili.com/record/21652717*", "*://live.bilibili.com/blanc/21652717?liteVersion=true"],
     "run_at": "document_end"
   },{
     "all_frames": true,
-    "css": ["css/host.css", "css/button.css"],
+    "css": ["css/host.min.css", "css/button.min.css"],
     "js": ["js/pudding.js","js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/21413565*", "*://live.bilibili.com/21413565?*", "*://live.bilibili.com/record/21413565*","*://live.bilibili.com/blanc/21413565?liteVersion=true"],
     "run_at": "document_end"
   },{
     "all_frames": true,
-    "css": ["css/host.css", "css/button.css"],
+    "css": ["css/host.min.css", "css/button.min.css"],
     "js": ["js/seki.js","js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/1603600*", "*://live.bilibili.com/1603600?*", "*://live.bilibili.com/record/1603600*","*://live.bilibili.com/blanc/1603600?liteVersion=true"],
+    "run_at": "document_end"
+  },{
+    "all_frames": true,
+    "css": ["css/host.min.css", "css/button.min.css", "css/videos.min.css"],
+    "js": ["js/Jquery-3.5.1.js","js/VideoHost.js"],
+    "matches": ["*://www.bilibili.com/video/*"],
     "run_at": "document_end"
   }],
   "web_accessible_resources": ["images/*", "css/*", "js/*"],
