--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,7 @@
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css", "css/videos.min.css"],
-    "js": ["js/Jquery-3.5.1.js","js/VideoHost.js"],
+    "js": ["js/protobuf.js", "js/ADT.js", "js/Jquery-3.5.1.js", "js/VideoHost.js"],
     "matches": ["*://www.bilibili.com/video/*"],
     "run_at": "document_end"
   }],
