--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "rua豹器",
   "manifest_version": 2,
-  "version": "4.15",
+  "version": "5.0",
   "browser_action": {
     "default_popup": "popup.html"
   },
   "description": "rua!",
-  "permissions": ["cookies","contextMenus", "storage","notifications","webRequest","webRequestBlocking","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/", "https://www.bilibili.com/", "https://*.hdslb.com/*", "https://api.vc.bilibili.com/", "https://tyrael-lee.gitee.io/", "https://tyraeldlee.github.io/", "*://*.bilivideo.com/", "*://*.akamaized.net/"],
+  "permissions": ["cookies","contextMenus","storage","notifications","webRequest","webRequestBlocking","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/", "https://www.bilibili.com/", "https://*.hdslb.com/*", "https://api.vc.bilibili.com/", "https://tyrael-lee.gitee.io/", "https://tyraeldlee.github.io/", "*://*.bilivideo.com/", "*://*.akamaized.net/"],
   "background": {
     "scripts": ["js/ADT.js","js/Jquery-3.5.1.js","js/background.min.js"],
     "persistent": true
@@ -49,7 +49,7 @@
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css", "css/videos.min.css"],
-    "js": ["js/protobuf.js", "js/ADT.js", "js/Jquery-3.5.1.js", "js/VideoHost.js"],
+    "js": ["js/protobuf.js", "js/ADT.js", "js/Jquery-3.5.1.js", "js/VideoHost.min.js"],
     "matches": ["*://www.bilibili.com/video/*"],
     "run_at": "document_end"
   }],
