afterload and webhost have been merged

--- a/manifest.json
+++ b/manifest.json
@@ -19,25 +19,19 @@
   },
   "content_scripts": [{
     "all_frames": true,
-    "css": ["css/tips.min.css"],
-    "js": ["js/ADT.js","js/AfterLoad.min.js"],
-    "matches": ["*://live.bilibili.com/*"],
-    "run_at": "document_end"
-  },{
-    "all_frames": true,
     "js": ["js/Lott.min.js"],
     "matches": ["*://live.bilibili.com/p/html/live-lottery/anchor-join*"],
     "run_at": "document_end"
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css"],
-    "js": ["js/haruka.js","js/WebHost.min.js"],
+    "js": ["js/ADT.js","js/haruka.js","js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/21652717*", "*://live.bilibili.com/record/21652717*", "*://live.bilibili.com/blanc/21652717?liteVersion=true"],
     "run_at": "document_end"
   },{
     "all_frames": true,
     "css": ["css/host.min.css", "css/button.min.css"],
-    "js": ["js/pudding.js","js/WebHost.min.js"],
+    "js": ["js/ADT.js","js/pudding.js","js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/21413565*", "*://live.bilibili.com/record/21413565*","*://live.bilibili.com/blanc/21413565?liteVersion=true"],
     "run_at": "document_end"
   },{
@@ -48,7 +42,7 @@
     "run_at": "document_end"
   },{
     "all_frames": true,
-    "css": ["css/host.min.css", "css/button.min.css"],
+    "css": ["css/host.min.css", "css/button.min.css", "css/tips.min.css"],
     "js": ["js/WebHost.min.js"],
     "matches": [ "*://live.bilibili.com/*", "*://live.bilibili.com/record/*","*://live.bilibili.com/blanc/*?liteVersion=true"],
     "exclude_matches": ["*://live.bilibili.com/21652717*", "*://live.bilibili.com/record/21652717*", "*://live.bilibili.com/blanc/21652717?liteVersion=true","*://live.bilibili.com/21413565*", "*://live.bilibili.com/record/21413565*","*://live.bilibili.com/blanc/21413565?liteVersion=true","*://live.bilibili.com/1603600*", "*://live.bilibili.com/record/1603600*","*://live.bilibili.com/blanc/1603600?liteVersion=true"],
