--- a/manifestmv3.json
+++ b/manifestmv3.json
@@ -1,15 +1,14 @@
 {
   "name": "rua豹器",
-  "manifest_version": 2,
-  "version": "5.9",
-  "browser_action": {
+  "manifest_version": 3,
+  "version": "6.0",
+  "description": "rua!",
+  "permissions": ["alarms", "cookies", "contextMenus", "storage", "notifications", "webRequest"],
+  "action": {
     "default_popup": "popup.html"
   },
-  "description": "rua!",
-  "permissions": ["cookies","contextMenus","storage","notifications","webRequest","webRequestBlocking","https://api.live.bilibili.com/*","https://api.bilibili.com/*", "https://live.bilibili.com/", "https://www.bilibili.com/", "https://*.hdslb.com/*", "https://api.vc.bilibili.com/", "https://tyrael-lee.gitee.io/", "https://tyraeldlee.github.io/", "*://*.bilivideo.com/", "*://*.akamaized.net/"],
   "background": {
-    "scripts": ["ffmpeg/ffmpeg.min.js","ffmpeg/ffmpeg-core.js","js/background.min.js"],
-    "persistent": true
+    "service_worker": "js/sw.js"
   },
   "icons": {
     "16": "images/haruka16.png",
@@ -66,6 +65,20 @@
     "matches": ["*://www.bilibili.com/audio/*"],
     "run_at": "document_end"
   }],
-  "web_accessible_resources": ["images/*", "css/*", "js/*", "ffmpeg/*"],
-  "content_security_policy": "script-src 'self' 'unsafe-eval' https://api.live.bilibili.com; object-src 'self'"
+  "web_accessible_resources": [{"resources": ["images/*", "css/*", "js/*"], "matches": ["https://*/*"]}],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
+  "host_permissions": [
+    "https://api.live.bilibili.com/*",
+    "https://api.bilibili.com/*",
+    "https://live.bilibili.com/",
+    "https://www.bilibili.com/",
+    "https://*.hdslb.com/*",
+    "https://api.vc.bilibili.com/",
+    "https://tyrael-lee.gitee.io/",
+    "https://tyraeldlee.github.io/",
+    "*://*.bilivideo.com/",
+    "*://*.akamaized.net/"
+  ]
 }
